--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<title>Моя первая веб-страница</title>
+</head>
 
+<body>
+<div align=center>
+  <h2>Моя первая страница на HTML</h2>
+  <br>
+  <h1>Привет МИР!</h1>
+  <img src="https://i.pinimg.com/originals/30/f1/f3/30f1f38be06c0538cf19846da5ada4c3.jpg">
+</div>
+</body>
+
+</html> 
